styles/globals.scss
/* ... */
table {
	width: 100%;
	border-collapse: collapse;
	height: 100px;
	overflow: scroll;
	position: relative;
}

::-webkit-scrollbar {
	width: 6px;
}

::-webkit-scrollbar-track {
	background: #1a1b26;
}

::-webkit-scrollbar-thumb {
	background: rgba(145, 70, 255, 0.6);
	border-radius: 3px;
}

::-webkit-scrollbar-thumb:hover {
	background: #BF94FF;
}

th,
td {
	border: 1px solid #666;
	padding: 8px;
	text-align: left;
}

th {
	background-color: #282a36;
	color: #ff5555;
	text-align: center;
}

thead:first-child {
	position: sticky;
	top: -11px;
	z-index: 1;
}

tr:nth-child(even) {
	background-color: #282a36;
}

tr:nth-child(odd) {
	background-color: #44475a;
}

td {
	text-align: center;
	color: #f8f8f2;
}

.code-block {
	overflow: auto;
}

.code-header {
	background-color: #44475a;
	color: #fff;
	padding: 0.5rem;
	font-weight: bold;
	border-top-left-radius: 5px;
	border-top-right-radius: 5px;
	text-transform: uppercase;
}

.scrollspy-sticky {
	position: sticky;
	z-index: 1;
	top: 0 !important;
	font-size: 14px;
}

.scrollspy-item:hover {
	color: #9146FF;
	background-color: transparent;
	font-weight: 600;
	border-radius: 0;
	transition: all 0.1s ease-in-out;
	text-decoration: none;
}

.scrollspy-item {
	padding-bottom: 3px;
	text-decoration: none;
	color: #efeff0;
}

.scrollspy-active {
	color: #9146FF;
	background-color: transparent;
	box-shadow: none;
	border-left: 0.15rem solid #232f3e;
	font-weight: 600;
	padding-left: 0.25rem;
	border-radius: 0;
	line-height: 1.1rem;
	transition: all 0.1s ease-in-out;
}

pre {
	margin: 0;
}

.codeSec {
	display: block;
	color: #333;
	white-space: pre-wrap;
}

.language-sql {
	background-color: #282a36 !important;
}

html {
	scroll-behavior: smooth;
	overflow-x: hidden;

	@media (min-width: 768px) {
		font-size: 14px;
	}

	@media (min-width: 1024px) {
		font-size: 15px;
	}

	@media (min-width: 1536px) {
		font-size: 18px;
	}
	@media (min-width: 1800px) {
		font-size: 20px;
	}
	@media (min-width: 2000px) {
		font-size: 22px;
	}
}

:root {
	color-scheme: only light;
}

::-moz-selection {
	color: white;
	background: #9146FF;
}

::selection {
	color: white;
	background: #9146FF;
}

.section-container {
	@apply xl:px-20 md:px-12 px-4 mx-auto;
	max-width: 90vw;
	
	@media (min-width: 1536px) {
		max-width: 85vw;
	}
	
	@media (min-width: 1800px) {
		max-width: 80vw;
	}
}

a {
	cursor: none !important;
}

.typed-cursor {
	font-size: 2rem;
}

.outer-menu {
	&.menu-visible {
		.hamburger {
			> div {
				transform: rotate(135deg);
				&:before {
					top: 0;
					transform: rotate(90deg);
				}
				&:after {
					top: 0;
					transform: rotate(90deg);
					opacity: 0;
				}
			}
		}
		.menu {
			pointer-events: auto;
			visibility: visible !important;
			backdrop-filter: blur(0.625rem);
			-webkit-backdrop-filter: blur(0.625rem);
			> div {
				transform: scale(1);
				transition-duration: 0.4s;
				> div {
					opacity: 1;
					transition: opacity 0.4s ease 0.4s;
				}
			}
		}
		&:hover {
			.hamburger {
				> div {
					transform: rotate(225deg);
				}
			}
		}
	}
	.hamburger {
		z-index: 1;
		backface-visibility: hidden;

		> div {
			height: 0.125rem;
			transition: all 0.4s ease;
			-webkit-box-pack: center;
			&:before,
			&:after {
				content: "";
				z-index: 1;
				position: absolute;
				left: 0;
				width: 100%;
				top: -0.5rem;
				height: 0.125rem;
				background: inherit;
				transition: all 0.4s ease;
			}
			&:after {
				top: 0.5rem;
			}
		}
	}
	.menu {
		backface-visibility: hidden;
		outline: 0.0625rem solid transparent;
		> div {
			width: 250vw;
			height: 250vw;
			transform: scale(0);
			will-change: transform;
			border-radius: 50%;
			transition: all 0.4s ease;
			backface-visibility: hidden;
			background: rgba(0, 0, 0, 0.5);
			@supports not (backdrop-filter: blur(1px)) {
				background: rgba(0, 0, 0, 0.8);
			}

			> div {
				max-width: 90vw;
				transition: opacity 0.4s ease;
			}
			ul {
				li {
					a {
						background: linear-gradient(
							90deg,
							#ffffff 0%,
							#ffffff 50%,
							#BF94FF 51%,
							#9146FF 100%
						);
						background-size: 200% 100%;
						-webkit-background-clip: text;
						-webkit-text-fill-color: transparent;

						&:hover,
						&:focus {
							background-position: 100% 0;
						}
					}
				}
			}
		}
	}
}

.progress {
	height: 0.1875rem;

	.progress-bar {
		height: 0.2rem;
		transform-origin: left;
		will-change: transform;
		transform: scaleX(0);
		@apply w-full;
		background: linear-gradient(90deg, #9146FF 0%, #BF94FF 100%);
	}
}

.text-gradient {
	background: linear-gradient(90deg, #BF94FF 0%, #9146FF 100%);
	-webkit-background-clip: text;
	-webkit-text-fill-color: transparent;
}

.text-strong {
	background: linear-gradient(
		90deg,
		#ffffff 0%,
		#ffffff 50%,
		#BF94FF 51%,
		#9146FF 100%
	);
	background-size: 200% 100%;
	-webkit-background-clip: text;
	-webkit-text-fill-color: transparent;
}

.project-wrapper::-webkit-scrollbar {
	display: none;
}

.skill {
	padding-right: 1.25rem !important;
	padding-bottom: 1.25rem !important;
}

.img-cus {
	border: 1px solid #9146FF !important;
	border-radius: 0.5rem !important;
}

.img-cus:hover {
	border: 1px solid #9146FF !important;
	cursor: pointer;
	transition: all 0.4s ease-in-out;
	transform: scale(1.1);
}

.stats-number {
	padding-right: 1.25rem !important;
	padding-bottom: 1.25rem !important;
	font-size: 1.75rem;
}

.stats-number p:hover {
	color: #9146FF;
}

footer {
	background: url("/footer-bg.svg"),
		linear-gradient(
			153.86deg,
			#BF94FF 0%,
			#9146FF 15.69%,
			#6B2FBF 48.9%,
			#9146FF 95.52%
		);
}
/* ... */

